config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  type: NodePort
  selector:
    app: hello
  ports:
  - name: hello-port
    protocol: TCP
    port: 80
    targetPort: 8080
