config/ingress.yaml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "cloudberry-ingress"
  namespace: "default"
  annotations:
    networking.gke.io/managed-certificates: "cloudberry-ai-certificate,cloudberry-ai-uk-certificate,cloudberry-ai-fi-certificate"
spec:
  defaultBackend:
    service:
      name: "assets-proxy"
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: "/assets"
        backend:
          service:
            name: "assets-proxy"
            port:
              number: 80
        pathType: "ImplementationSpecific"
status:
  loadBalancer: {}
